--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,280 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.navbar{
+  height:70px;
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+  padding:0 32px;
+  background: linear-gradient(135deg, var(--primary-white), var(--primary-dark));
+  border-bottom:none;
+  position:sticky;
+  top:0;
+  z-index:100;
+  box-shadow: var(--shadow-soft);
+
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.navbar-logo{
+  text-decoration:none;
+  font-size:24px;
+  font-weight:800;
+  color:var(--text-dark);
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.navbar-center{
+  display:flex;
+  gap:32px;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.navbar-center a{
+  text-decoration: none;
+  font-weight:600;
+  color:var(--text-dark);
+
+}
+.navbar-center a:hover{
+  color:var(--text-gray);
+  
+}
+.navbar-right{
+  display:flex;
+  align-items: center;
+  
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.hero{
+  height:90vh;
+  background-color: var(--bg-light);
+  display:flex;
+  
+  align-items: center;
+ 
+  padding:0 24px;
+  animation:fadeIn 1s ease-out;
+}
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.hero-container {
+  margin: auto;
+  display: flex;
+  /* flex-wrap:wrap; */
+  justify-content: space-between;
+  align-items: center;
+  /* gap: 60px; */
+  max-width: 1200px;
+  width: 100%;
 }
 
-.card {
-  padding: 2em;
+.hero-left h1{
+  /* font-size: 45px;     */
+  line-height: 1.1;
+  font-weight:800;
+  color:var(--text-dark);
+}
+.hero-left p{
+  font-size:16px;
+  margin-top:20px;
+  color:var(--text-gray);
+  max-width:480px;
+}
+.hero-buttons{
+  margin-top:32px;
+  display:flex;
+  gap:16px;
+}
+.hero-platforms{
+  margin-top:24px;
+  display:flex;
+  gap:20px;
+  font-size:16px;
+  font-weight: 500;
 }
 
-.read-the-docs {
-  color: #888;
+.hero-image {
+  width: 100%;
+  height: 400px;
+  
+}
+
+
+
+
+.about{
+  background:#bcc1ca;
+    padding:50px 0;
+    animation: fadeIn 1s ease-out 0.2s backwards;
+}
+
+.about-container{
+  max-width:1200px;
+  padding:0 24px;
+  display:flex;
+  gap:24px;
+  margin:auto;
+ align-items:flex-start;
+
+}
+.about-left,.about-right{
+  flex:1;
+}
+
+.about-left h2{
+  font-size:32px;
+  font-weight:700;
+}
+.about-left p{
+  font-size:18px;
+  color:var(--text-gray);
+  line-height: 1.7;
+
+}
+
+.about-right{
+  display:flex;
+  flex-direction: column;
+  gap:16px;
+}
+.about-card{
+  
+  /* background:var(--bg-light); */
+  padding: 0 32px;
+  border-radius:20px;
+  /* box-shadow:var(--shadow-soft); */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.about-card:hover {
+  transform: translateY(-8px);
+  box-shadow: var(--shadow-medium);
+}
+.about-card:hover {
+  transform: translateY(-8px);
+  box-shadow: var(--shadow-medium);
+}
+.about-icon{
+  font-size:16px;
+  
+}
+.about-card h3{
+  font-size:20px;
+  margin-bottom:8px;
+
+}
+.about-card p{
+  font-size:16px;
+  color:var(--text-gray);
+  line-height: 1.6;
+}
+
+
+
+
+
+.features{
+  padding: 120px 0;
+  background: var(--bg-light);
+  animation: fadeIn 1s ease-out 0.4s backwards;
+}
+
+.features-container{
+  max-width: 1200px;
+  margin: auto;
+  padding: 0 24px;
+
+}
+.features-header{
+  display:flex;
+  flex-direction:column;
+  align-items: center;
+  margin-bottom:8px;
+}
+.features-header p{
+font-size:16px;
+font-weight:500;
+}
+.features-flex{
+  
+  display:flex;
+  /* justify-content: center; */
+  flex-wrap:wrap;
+  gap:20px;
+}
+.feature-card{
+  width:250px;
+  background:#9a9ca0;
+  padding:32px;
+  border-radius:20px;
+  
+}
+.feature-card:hover {
+  transform: translateY(-8px);
+  box-shadow: var(--shadow-medium);
+}
+.feature-icon{
+  font-size:40px;
+ 
+}
+.feature-card h3{
+  font-size:20px;
+  margin-bottom:8px;
+} 
+.feature-card p{
+  font-size:16px;
+  color:var(--text-gray);
+  line-height: 1.6;
+}
+.footer{
+  background:var(--text-dark);
+  color:var(--primary-white);
+  padding-top:30px;
+}
+.footer-container{
+  max-width:1200px;
+  padding:0 24px;
+  margin:auto; 
+  display:flex;
+  flex-wrap:wrap;
+  gap:50px;
+  
+}
+
+.footer-brand h3{
+  font-size:20px;
+  margin-bottom:12px;
+
+}
+.footer-brand p{
+  font-size:16px;
+  max-width:300px;
+  line-height:1.7;
+}
+.footer-links{
+  display:flex;
+  flex-direction:column;
+  gap:12px;
+}
+.footer-links h4{
+  font-size:18px;
+  margin-bottom:12px;
+}
+.footer-links a{
+ 
+  color:var(--primary-white);
+  text-decoration:none;
+  transition: color 0.3s ease;
+  
+
+}
+.footer-links a:hover {
+  color: rgb(192, 172, 172);
+}
+.footer-bottom{
+  margin-top:60px;
+  padding:20px 0;
+  text-align:center;
+   border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+.footer-bottom p {
+  font-size: 14px;
+  color: #9ca3af;
 }
